update doctor controller